# walletWhitelist

./: Anchor.toml  README.md  wallet_whitelisting_for_minting.json
programs/wallet_whitelisting_for_minting/: Cargo.toml
programs/wallet_whitelisting_for_minting/src/: error.rs  lib.rs
programs/wallet_whitelisting_for_minting/src/instructions/: create_whitelist_account.rs  decrease_whitelist_count.rs
programs/wallet_whitelisting_for_minting/src/state/: mod.rs  wallet_whitelist.rs
tests/: wallet_whitelisting_for_minting.ts
