[package]
name = "wallet_whitelisting_for_minting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wallet_whitelisting_for_minting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
strum_macros = "0.24"
strum = "0.24"